# reactome_biopax_parser

./: .gitignore  README.md  pyproject.toml  run_benchmarks.sh  run_comparison_5pathways.sh  run_sthn_5pathways.sh  sbatch_comparison_5pathways.sh  test.ipynb  test.py
.github/workflows/: ci.yml
baselines/: models.py  save_graph.py  train.py
baselines/GNNs/: README.md  fish_hgcn.py  fish_rgcn.py  fish_sthn.py  fish_tgat.py  save_pickle.py  test.py  test_hgcn.py  test_sthn.py  test_tgat.py  time_encoding.py  tune.py  tune_hgcn.py  tune_sthn.py  tune_tgat.py
baselines/rem_proj/: main.R  no_feats.R
baselines/rgcns/: fish_rgcn.py  test.py  tune.py  tune_tgat.py
hpc_scripts/: sbatch_comparison_5pathways.sh  sbatch_mrr_eval.sh  sbatch_mrr_eval_resume.sh  sbatch_tune_eval_rgcn.sh  sbatch_tune_eval_sthn.sh  sbatch_tune_eval_tgat.sh
reactome_graphs/: __init__.py  featurise.py  neo4j_to_nx.py  parser.py  pathway_comp.py  utils.py  visualisations.py
reactome_graphs/parser/: __init__.py  disease_parsing.py  hyper_graph.py  nx_graph.py  xml_parse.py
reactome_parser/: __init__.py  parser.py  setup.py  utils.py
tests/: conftest.py  test_disease_overlay.py  test_download_and_parse.py
tests/fixtures/: R-HSA-139910.xml
